# feltorutilities

./: .gitignore  COMPASS-setup.ipynb  FELTOR Inputs creator.ipynb  README.md  feltor.sh  feltordiag.sh  feltorutilities.py  generate_data.py  job.sh  job_diag.sh  parameters.ipynb  pyproject.toml  run_diag.py  setup.py  test_feltorutilities.py
common/: parameters.ipynb
feltor/: COMPASS-setup.ipynb  feltor.sh  feltordiag.sh  generate_data.py  job.sh  run_diag.py  submit_job.sh
feltorutilities/: __init__.py
tests/: test_feltorutilities.py
